An attempt to fix the "active nav button is not centered" bug

--- a/shared/style.css
+++ b/shared/style.css
@@ -86,6 +86,8 @@ a:hover {
 #header_inside ul li.active {
 	background:#fff;
 	color:#111;
+	
+	text-align:center;
 }
 
 /* content */
